--- a/views/main/chat.ejs
+++ b/views/main/chat.ejs
@@ -17,7 +17,7 @@
                 <a href="rooms">Leave Room</a>
                     <div class="me">
                         <p class="my-name"><%= username %>%></p>
-                        <img src="\<%= userPicture %>" alt="pic">
+                        <img src="<%= userPicture %>" alt="pic">
                     </div>
             </div>
             <div class="menu-icon" onclick="toggle()">
